fix(examples): update styling of firestore example to make new todo input more visible

--- a/examples/complete/firestore/src/App.css
+++ b/examples/complete/firestore/src/App.css
@@ -15,7 +15,8 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 40vh;
+  max-height: 50vh;
   display: flex;
   flex-direction: column;
   align-items: center;
